[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CALM"
version = "1.0.0"
description = "Membrane Shape Analysis tools"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }  # keep a GPLv3 text here
authors = [
  { name = "Isabell Lindahl", email = "isabell.lindahl@nbi.ku.dk" },
  { name = "Weria Pezeshkian", email = "weria.pezeshkian@nbi.ku.dk" },
  { name = "Fabian Schuhmann", email= "fabian.schuhmann@nbi.ku.dk" } 
]
keywords = ["membrane"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.in"] }

[project.urls]
Homepage = "https://example.com/CALM"
Repository = "https://example.com/CALM.git"
Issues = "https://example.com/CALM/issues"

[tool.setuptools]
license-files = ["LICENSE"]

# If you use a src/ layout (recommended), uncomment the next two sections:
#[tool.setuptools.packages.find]
#where = ["src"]

#[tool.setuptools.package-data]
#"calm" = ["py.typed"]  # or any data files you ship
